--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -21,7 +21,7 @@
         </div>
 
         <div class="compra-cuotas">
-        <i class="fas fa-hand-holding-usd"></i><p>Comprá en cuotas y sin tarjeta de crédito</p>
+        <i class="fas fa-hand-holding-usd icono-compra-cuotas"></i><p>Comprá en cuotas y sin tarjeta de crédito</p>
         </div>
 
 
@@ -39,8 +39,14 @@
             <p>Mis compras</p><i class="fas fa-shopping-basket"></i>
         </div>
 
-        
     </nav>
+
+        <div class="contenedor-hijo-barras">
+            <button><i class="fas fa-bars icono-barras"></i></button>
+        </div>
+    
+
+
     <div class="imagen-debajo-nav">
         <img src="/images/img-home-banner.jpg" alt="">
     </div>
@@ -154,9 +160,6 @@
             <h3>Pagá con tarjeta o en efectivo</h3>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
         </div>
-
-
-        
 
     </div>
 
